# streetscanner

./: readme.md
src/: main.py  maps_service.py  pyproject.toml  route_manager.py  server.py  street_scanner.py  vision_analyzer.py
src/static/: app.js  index.html  style.css
